# API/routes/booking.js
@@ -4,7 +4,7 @@ const controller = require("../controllers/bookingController");
 const isAuthenticated = require("../middleware/auth");
 
 router.post("/", isAuthenticated, controller.createBooking);
-router.get("/user", isAuthenticated, controller.getUserBookings);
+router.get("/user/:id", isAuthenticated, controller.getUserBookings);
 router.get("/", isAuthenticated, controller.getAllBookings);
 router.put("/:id", isAuthenticated, controller.updateBooking);
 router.patch("/:id/status", isAuthenticated, controller.updateBookingStatus);
