# API/swagger-output.json
@@ -382,10 +382,16 @@
         }
       }
     },
-    "/api/bookings/user": {
+    "/api/bookings/user/{id}": {
       "get": {
         "description": "",
         "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "authorization",
             "in": "header",
